k8s/config/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${SERVICE}
  namespace: ${NAMESPACE}
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
  selector:
    service: ${SERVICE}
